At this point I'm loosing track. But let's see... - User profile mostly done (with new abstract egdes, which I'm not quite sure about) - Hashtags backend is buggy but mostly finished - MaxThoughtsOnScreen moved to graph controls - Titles visibility threshold, edge length, etc. ...

--- a/AfantazieWeb/src/locales/cz.json
+++ b/AfantazieWeb/src/locales/cz.json
@@ -59,7 +59,7 @@
     "RegisterLink": "Přidej se k nám:-)",
     "RegistrationSuccessful": "Registrace úspěšná!",
     "RegistrationTitle": "Registrace",
-    "RegistrationHelpMessage": "- Jméno musí obsahovat pouze česká písmena a mezery\n- Délka jména musí být mezi 3 a 20 znaky\n- Heslo musí mít délku 8 - 20 znaků a musí obsahovat: Číslici, Malé písmeno a Velké písmeno",
+    "RegistrationHelpMessage": "- Jméno musí obsahovat pouze česká písmena a mezery\n- Délka jména musí být mezi 3 a 20 znaky\n- Heslo musí mít délku 8 - 80 znaků a musí obsahovat: Číslici, Malé písmeno a Velké písmeno",
     "AlreadyHaveAnAccount": "Máš účet?",
     "ByRegisteringYouAgreeWith": "Registrací souhlasíš s",
     "TermsAndConditions": "Podmínkami používání a Zásadami o ochraně osobních údajů",
@@ -88,10 +88,8 @@
     "ThoughtList": "Seznam myšlenek",
     "SettingsSaved": "Nastavení bylo uloženo",
     "ColorValidation": "Barva musí být ve formátu #RRGGBB",
-    "MaxThoughtsLabel": "Maximální počet vykreslených myšlenek:",
-    "ClickHere": "<- klikni sem",
-    "MaxThoughtsValidation": "Maximální počet myšlenek musí být alespoň 10",
-    "MaxThoughtsHint": "Pokud se ti graf seká, zmenšení tohoto čísla pomůže. Pokud máš výkonnější stroj, můžeš číslo zvětšit.",
+    "ClickHere": "<- klikni sem  nebo  edituj toto ->",
+    "BioValidation": "O mně může mít maximálně 300 znaků",
     "CurrentNumberOfThoughtsLabel": "Současný počet myšlenek na Afantázii: ",
     "DeleteThoughtsPositions": "Smazat uložené pozice myšlenek",
     "DeleteThoughtsPositionsHint": "Pozice myšlenek se průběžně ukládají v prohlížeči. Pokud je smažeš, graf se při příštím načtení bude muset znovu stabilizovat.",
@@ -113,5 +111,21 @@
     "Replies": "ODPOVĚDI",
     "All": "VŠECHNY",
     "LivePreview": "ŽIVĚ",
-    "More": "VÍCE"
+    "More": "VÍCE",
+    "SettingsBioLabel": "O mně: ",
+    "SizeLabel": "Velikost:",
+    "EdgesLabel": "Hrany:",
+    "EdgesNone": "Žádné",
+    "EdgesSimple": "Jednoduché",
+    "EdgesArrow": "Šipka",
+    "EdgesAnimated": "Animované",
+    "EdgesGradient": "Gradient",
+    "TitlesThresholdLabel": "Práh viditelnosti názvů",
+    "GravityLabel": "Gravitace",
+    "TitleOnHoverLabel": "Titulek při přejetí",
+    "UpFlowLabel": "Tok nahoru",
+    "ShowFPSLabel": "Zobrazit FPS",
+    "NoBordersLabel": "Bez okrajů",
+    "DisableSimulationLabel": "Zakázat simulaci",
+    "EdgesLengthLabel": "Délka hran:"
 }
