--- a/AfantazieWeb/src/locales/en.json
+++ b/AfantazieWeb/src/locales/en.json
@@ -92,9 +92,8 @@
     "SettingsSaved": "Settings saved",
     "ColorValidation": "Color must be in format #RRGGBB",
     "MaxThoughtsLabel": "Maximum amount of rendered thoughts:",
-    "ClickHere": "<- click here",
-    "MaxThoughtsValidation": "Maximum thoughts must be at least 10",
-    "MaxThoughtsHint": "Default value is 100. You can increase it to see more thoughts but the graph might not perform as well - both in terms of performance and readability.",
+    "ClickHere": "<- click here  or  edit here ->",
+    "BioValidation": "Bio can be maximum 300 characters long",
     "CurrentNumberOfThoughtsLabel": "Current number of thoughts on Aphantasia: ",
     "DeleteThoughtsPositions": "Delete thought positions",
     "DeleteThoughtsPositionsHint": "This will delete the positions saved in your browser. The graph will have to stabilize again on the next load.",
@@ -116,5 +115,21 @@
     "Replies": "REPLIES",
     "All"   : "ALL",
     "LivePreview": "LIVE",
-    "More": "MORE"
+    "More": "MORE",
+    "SettingsBioLabel": "Bio: ",
+    "SizeLabel": "Size:",
+    "EdgesLabel": "Edges:",
+    "EdgesNone": "None",
+    "EdgesSimple": "Simple",
+    "EdgesArrow": "Arrow",
+    "EdgesAnimated": "Animated",
+    "EdgesGradient": "Gradient",
+    "TitlesThresholdLabel": "Titles visibility threshold",
+    "GravityLabel": "Gravity",
+    "TitleOnHoverLabel": "Title on hover",
+    "UpFlowLabel": "Up flow",
+    "ShowFPSLabel": "Show FPS",
+    "NoBordersLabel": "No borders",
+    "DisableSimulationLabel": "Disable simulation",
+    "EdgesLengthLabel": "Edge length"
 }
