--- a/AfantazieWeb/src/locales/en.json
+++ b/AfantazieWeb/src/locales/en.json
@@ -1,5 +1,5 @@
 {
-    "Title": "Aphantasia",
+    "Title": "Bugfest",
     "WelcomeBack": "Welcome back!",
     "Quips": [
         "Let's graph together!",
@@ -26,7 +26,7 @@
         "We don't support aphatasiating under the desk!",
         "The ideal app for a poop session.",
         "Any similarity to neural networks is purely coincidental",
-        "Instead of a huge big-tech company run by one medium-tech Aleš",
+        "Instead of a huge big-tech company, run by one medium-tech Aleš",
         "Stop refreshing before you break it -_-",
         "Social network for graph enthusiasts",
         "\"Finally a social network that is actually a network!\" -man",
@@ -49,7 +49,89 @@
         "And haters be like \"But it doesn't do things that corporate websites do!\"",
         "that's when you see nothin up in ya head",
         "a... one way to see your thoughts...",
-        "just a thought"
+        "just a thought",
+        "a website with an identity crisis",
+        "move slow and break things",
+        "a canvas of a map of chains of thought of you",
+        "Have you seen my glasses?",
+        "I see a butterfly with a knife in it",
+        "A place where your thoughts live in time and space",
+        "6/10 Solid but still needs some work",
+        "There is also a nsfw website called fantasia. Do not confuse us with them, please...",
+        "where you can forget about the crushing weight of being for a moment.",
+        "the UI is terrible, but at east the text is rea",
+        "afa what now?",
+        "for weirdos like you and me",
+        "nebulastic adventure",
+        "smells spacey!",
+        "aka when social media sucks so you make your own",
+        "It's a bird! It's a plane! No, it's something very, but very different.",
+        "have you called your grandma this week?",
+        "don't you have anything better to do?",
+        "okay... so what?",
+        "open source and open graph",
+        "website with a heart (and a triangle)",
+        "● ■ ▲ ▼ ◆ 🞭 ❤",
+        "I like it and you might too!",
+        ":-o",
+        ";-j",
+        "o.o",
+        "...",
+        "not vrything nds to b strictly spaking finishd. |eeeeee|",
+        "please don't use flash with your camera",
+        "no skateboarding!",
+        "see you later, crocodile",
+        "skibidi aphantasia slays fam frfr",
+        "don't tell nasa we don't use their pictures.",
+        "iT's dIsOrIeNtInG",
+        "One day you will die. Yup...",
+        "Everyone gets a thought!",
+        "[NULL]",
+        "hello there",
+        "100% recyclable!",
+        "Beware! Construction in progress." ,
+        "God damn, there are so many bugs",
+        "Full of potential, but ultimately useless",
+        "I like big graphs and I cannot lie!",
+        "Where is everyone?",
+        "No way that's the shrimp!",
+        "Thoughts of various variety",
+        "Thoughts from thinking people",
+        "BANG!",
+        "",
+        "The prototypest of prototypes",
+        "Question in search of a solution to a discreete problem",
+        "FDL vs BFL 2: The bleeding edge . . . Coming soon to your cinema",
+        "idk",
+        "There's more where that came from.",
+        "Lives intertwined",
+        "Not evil",
+        "The future of graph-related social media",
+        "What day is it?",
+        "Where am I?",
+        "What is this all for?",
+        "One of the thoughts contais the meaning of life. Can you find it?",
+        "An imprint of minds",
+        "Map to a secret treasure",
+        "Whazzuuuuuuuuppp!",
+        "_",
+        "Scientifically proven to be.",
+        "Forgive the gramar errors",
+        "A website with an idea",
+        "Something something social network",
+        "Take that infinite feed!",
+        "Infinite feed sucks",
+        "nsfn",
+        "Like a... graph thing",
+        "Why scroll, when you can explore?",
+        "pet-friendly",
+        "You wouldn't get it",
+        "Get it?",
+        "Watch out! Ants!",
+        "But why tho?",
+        "It's a free graph real estate",
+        "We've got Agar.io at home",
+        "Oh hi Mark"
     ],
     "LoginTitle": "Log in",
     "NameOrEmail": "Username or email",
@@ -131,7 +213,7 @@
     "TitleOnHoverLabel": "Title on hover",
     "UpFlowLabel": "Up flow",
     "ShowFPSLabel": "Show FPS",
-    "NoBordersLabel": "No borders",
+    "StrongerPushForceLabel": "Stronger push force",
     "DisableSimulationLabel": "Disable simulation",
     "EdgesLengthLabel": "Edge length",
     "NodeSizeLabel": "Max node size",
