New backend scaffold created, registration endpoint wip

--- a/aphantasia_web/src/locales/en_quips.json
+++ b/aphantasia_web/src/locales/en_quips.json
@@ -31,7 +31,7 @@
     "Ads cost an extra fee",
     ":-)",
     "Welcome and have a nice day",
-    "Agario but peaceful",
+    "Agar.io but peaceful",
     "Oh my look at the time. It's graph o'clock!",
     "Animated graphs, Time sliding and a lot of bugs",
     "Constellation of ideas",
@@ -42,42 +42,42 @@
     "Thoughts on the web! Dots on the net! It's a Thoughtweb.ne...\nwait a minute...",
     "Have a thought to share?",
     "And haters be like \"But it doesn't do things that corporate websites do!\"",
-    "that's when you see nothin up in ya head",
-    "a... one way to see your thoughts...",
-    "just a thought",
-    "a website with an identity crisis",
-    "move slow and break things",
-    "a canvas of a map of chains of thought of you",
+    "That's when you see nothin up in ya head",
+    "A... one way to see your thoughts...",
+    "Just a thought",
+    "A website with an identity crisis",
+    "Move slow and break things",
+    "A canvas of a map of chains of thoughts of you",
     "Have you seen my glasses?",
     "I see a butterfly with a knife in it",
-    "A place where your thoughts live in time and space",
+    "A place where thoughts live in time and space",
     "6/10 Solid but still needs some work",
     "There is also a nsfw website called fantasia. Do not confuse us with them, please...",
-    "where you can forget about the crushing weight of being for a moment.",
+    "where you can forget about the crushing weight of being for a moment",
     "The UI is terrible, but at east the text is reabadle",
-    "apha what now?",
+    "Apha what now?",
     "For weirdos like you and me",
     "Nebulastic adventure",
     "Smells spacey!",
     "aka when social media sucks so you make your own",
-    "It's a bird! It's a plane! No, it's something very, but very different.",
+    "It's a bird! It's a plane! No, it's something very, but very different",
     "Have you called your grandma this week?",
     "Don't you have anything better to do?",
     "Okay... so what?",
     "Open source and open graph",
-    "Website with a heart (and a triangle)",
+    "Website with a heart (and a triangle too)",
     "● ■ ▲ ▼ ◆ 🞭 ❤",
     "I like it and you might too!",
     ":-o",
     ";-j",
     "o.o",
     "...",
-    "not vrything nds to b strictly spaking finishd.\n|eeeeee|",
+    "not vrything nds to b strictly spaking finishd.",
     "Please don't use flash with your camera",
     "No skateboarding!",
     "See you later, crocodile",
     "skibidi aphantasia slays fam frfr",
-    "Don't tell Nasa we use their pictures",
+    "Don't tell Nasa we use their photos",
     "iT's dIsOrIeNtInG",
     "One day you will die.\nYup...",
     "Everyone gets a thought!",
@@ -139,7 +139,7 @@
     "I'm starting to run out of these...",
     "See you in the graph realm",
     "A place for endless arguments and propaganda!\nOh no, wait... that's the other website...",
-    "We have influenced 0 elections and referendums!",
+    "We have influenced 0 elections or referendums!",
     "Do you know the muffin man?",
     "You feel an evil presence watching you...",
     "Stanley walked throught the RED door.",
@@ -228,7 +228,7 @@
     "Damn, it was supposed to be a todo app...",
     "So... something like Facebook?",
     "I like trains",
-    "Dijkstra would approve I hope",
+    "Dijkstra would approve",
     "You looking at me?!",
     "When a tree falls down and no one is around to hear it, why does my back hurt?",
     "Out of order",
@@ -242,6 +242,63 @@
     "A consensual hallucination",
     "A graph doohickey",
     "We've got cyberspace at home",
-    "Neuralink integration in works",
-    ""
+    "Neuralink integration in the works",
+    "It's not social media. It's Aphantasia!",
+    "Cloudy with a chance of clustering",
+    "Howdy",
+    "Hi:3",
+    "Can a graph be conscious?",
+    "Hmmm...",
+    "A hang out spot of particular particularity",
+    "It is very... specific",
+    "Let there be graph",
+    "Love it or hate it",
+    "Yeah, I don't get it either",
+    "Shouldn't you be doing something useful?",
+    "Quantifiably less quantity than the next best thing!",
+    "Contains 40% more thoughts than general brands*",
+    "Don't think about cats!",
+    "Ragebait punishable by silent treatment",
+    "Come explore with us!",
+    "I'm bad at naming things...",
+    "Wholesome and weird",
+    "You could make a website out of this",
+    "A businessless business idea",
+    "No cookies for you, I'm afraid",
+    "You have the right to remain thoughtful",
+    "Don't tell your friends.",
+    "A colorful curiosity",
+    "A curiosity for the curious",
+    "Where your hot take has coordinates",
+    "Rhymes with ljpsadsia",
+    "The masculine urge to draw graphs",
+    "Do not be afraid",
+    "Located two blocks behind Sagitarius A",
+    "Think, associate, explore",
+    "Take a number and have a seat",
+    "So. Many. Thoughts.",
+    "A seed of humanity in the chaos of online",
+    "Apha apha",
+    "If you ate yourself would you get twice as big or disappear completely?",
+    "Don't panic!",
+    "A garden for overthinkers",
+    "Have you seen Dag?",
+    "More than sum of its thoughts",
+    "Unimaginable",
+    "Unresistable",
+    "Can you use it in a sentence please?",
+    "I swear it gets better after like season 3",
+    "meh...",
+    "It's a whole thing",
+    "Product of Eurasia",
+    "Can you find it on a map?",
+    "It has that indie crunch",
+    "Ask your doctor if it's right for you",
+    "A geek's wet drea... okay, this one is to review",
+    "Three more to go!",
+    "where thougts are colorful and quips low in quality",
+    "Drum roll please...",
+    "300! Hooray!",
+    "There is a joke about normies somewhere for sure",
+    "Flies get stuck in it sometimes"
 ]
